--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "pages": [
+    "pages/movie/movie",
     "pages/index/index",
     "pages/demo/demo",
     "pages/demoindex/index",
-    "pages/logs/logs",
-    "pages/movie/movie"
+    "pages/logs/logs"
+
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -22,7 +23,7 @@
       {
         "selectedIconPath": "src/img/main_page_fill.png",
         "iconPath": "src/img/main_page.png",
-        "pagePath": "pages/index/index",
+        "pagePath": "pages/movie/movie",
         "text": "首页"
       },
       {
