--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/movie/movie",
     "pages/index/index",
+    "pages/movie/movie",
     "pages/demo/demo",
     "pages/demoindex/index",
     "pages/logs/logs"
@@ -11,7 +11,8 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
+    "backgroundColor": "#f5f5f5"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
@@ -23,13 +24,13 @@
       {
         "selectedIconPath": "src/img/main_page_fill.png",
         "iconPath": "src/img/main_page.png",
-        "pagePath": "pages/movie/movie",
+        "pagePath": "pages/index/index",
         "text": "首页"
       },
       {
         "selectedIconPath": "src/img/like_page_fill.png",
         "iconPath": "src/img/like_page.png",
-        "pagePath": "pages/movie/movie",
+        "pagePath": "pages/demo/demo",
         "text": "推荐"
       }
     ]
