--- a/app.json
+++ b/app.json
@@ -3,8 +3,6 @@
     "pages/index/index",
     "pages/search/search",
     "pages/movie/movie",
-    "pages/demo/demo",
-    "pages/demoindex/index",
     "pages/logs/logs",
     "pages/recommend/recommend"
   ],
@@ -21,8 +19,7 @@
     "color": "#9C9797",
     "selectedColor": "#F86E6E",
     "borderStyle": "white",
-    "list": [
-      {
+    "list": [{
         "selectedIconPath": "assets/img/main_page_fill.png",
         "iconPath": "assets/img/main_page.png",
         "pagePath": "pages/index/index",
