--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/search/search",
     "pages/movie/movie",
     "pages/logs/logs",
-    "pages/recommend/recommend"
+    "pages/recommend/recommend",
+    "pages/me/me"
   ],
   "window": {
     "backgroundTextStyle": "light",
